<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_gravity="fill_vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.MainActivity">

    <TextView
        android:id="@+id/activity_main_tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/welcome"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_main_tv_blog_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/blogs_header"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_tv_welcome" />

    <Button
        android:id="@+id/activity_main_btn_new_blog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/activity_main_tv_blog_header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:text="@string/activity_main_btn_new_blog"
        android:layout_marginTop="16dp"
        android:textColor="@color/white_background_color"
        android:backgroundTint="@color/dark_blue_color"
        android:paddingHorizontal="32dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_main_rv_blogs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_btn_new_blog" />

</androidx.constraintlayout.widget.ConstraintLayout>